--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = { version = "1.0.75", features = ["backtrace"] }
 clap = { version = "4.4.7", features = ["derive"] }
+octocrab = "0.31.2"
+tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
