--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2021"
 [dependencies]
 anyhow = { version = "1.0.75", features = ["backtrace"] }
 clap = { version = "4.4.7", features = ["derive"] }
+itertools = "0.11.0"
 microxdg = "0.1.0"
 octocrab = "0.31.2"
 tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
