--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ clap = { version = "4.4.7", features = ["derive"] }
 itertools = "0.11.0"
 microxdg = "0.1.0"
 octocrab = "0.31.2"
+reqwest = "0.11.22"
 tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
