--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,12 @@ edition = "2021"
 anyhow = { version = "1.0.75", features = ["backtrace"] }
 archive-reader = "0.3.5"
 clap = { version = "4.4.7", features = ["derive"] }
+file-format = "0.21.0"
 itertools = "0.11.0"
 microxdg = "0.1.0"
 octocrab = "0.31.2"
 reqwest = "0.11.22"
+symlink = "0.1.0"
 tempfile = "3.8.1"
 tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
+walkdir = "2.4.0"
