--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ itertools = "0.11.0"
 microxdg = "0.1.0"
 octocrab = "0.31.2"
 reqwest = "0.11.22"
+sqlite3 = "0.24.0"
 symlink = "0.1.0"
 tempfile = "3.8.1"
 tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
