feat: add regex support for `--filter`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ file-format = "0.21.0"
 itertools = "0.11.0"
 microxdg = "0.1.0"
 octocrab = "0.31.2"
+regex = "1.10.2"
 reqwest = "0.11.22"
 sqlite3 = "0.24.0"
 symlink = "0.1.0"
